--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
@@ -7,43 +8,51 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <!-- TextView untuk menampilkan teks -->
+    <!-- TextView untuk judul -->
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/judulTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Halo, ini adalah contoh RelativeLayout!"
-        android:textSize="18sp"
-        android:layout_centerHorizontal="true"
+        android:text="Contoh ConstraintLayout"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp" />
 
-    <!-- ImageView untuk menampilkan gambar -->
+    <!-- ImageView untuk menampilkan ikon -->
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:id="@+id/ikonImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/ic_launcher_foreground"
-        android:layout_below="@id/textView"
-        android:layout_centerHorizontal="true"
+        app:layout_constraintTop_toBottomOf="@id/judulTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
 
-    <!-- Button untuk aksi klik -->
+    <!-- Button untuk aksi -->
     <Button
-        android:id="@+id/button"
+        android:id="@+id/tombolButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Klik Saya"
-        android:layout_below="@id/imageView"
-        android:layout_centerHorizontal="true"
+        android:text="Lakukan Aksi"
+        app:layout_constraintTop_toBottomOf="@id/ikonImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
 
-    <!-- EditText untuk input teks -->
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
+    <!-- ProgressBar untuk indikator visual -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Masukkan teks disini"
-        android:layout_below="@id/button"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/tombolButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:visibility="invisible" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
